--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,10 @@ a,a:hover,a:focus,a:active{
 	color:inherit;
 }
 body{
+	height: 100%;
 	position:relative;
+	background: url("/images/iconbox-1.jpg") no-repeat 50% 50% ;
+	background-size:cover;
 }
 a{
 	position:absolute;
