--- a/www/css/main-page.css
+++ b/www/css/main-page.css
@@ -27,12 +27,9 @@ html{
 	background-color: #f07772;
 }
 body{
-	background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
 	/*background-color: #4b4756;*/
 	background-attachment: fixed;	
 	height: 100%;	
-	background-size:cover;
-	vertical-align: middle;	
 	
 }
 .bg{	
@@ -47,6 +44,10 @@ body{
 	border-radius: 10px;
 	background-color: rgba(255,255,255,.9);
 	box-sizing: border-box;
+		background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
+	background-attachment: fixed;	
+	background-size:cover;
+	vertical-align: middle;	
 }
 .container .vertical-align{	
 	display: table-row;	
