--- a/www/css/main-page.css
+++ b/www/css/main-page.css
@@ -11,6 +11,31 @@ html{
   
   background-color: white;
 }*/
+
+body{
+	/*background-color: #4b4756;*/
+	background-attachment: fixed;	
+	height: 100%;	
+}
+.bg{	
+	height: 100%;	
+	position:relative;
+	padding:20px 10px 20px 10px;
+	background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
+	background-attachment: fixed;	
+	background-size:cover;
+	vertical-align: middle;	
+	box-sizing: border-box;
+}
+.container{
+	padding:30px 0 30px 0;
+  display: table;	
+	min-height: 100%;		
+	border-radius: 10px;
+	background-color: rgba(255,255,255,.9);
+	box-sizing: border-box;
+
+}
 .container > a{			
 	display: block;
 	float:right;
@@ -25,31 +50,6 @@ html{
 }
 .container > a:hover{
 	background-color: #f07772;
-}
-body{
-	/*background-color: #4b4756;*/
-	background-attachment: fixed;	
-	height: 100%;	
-	
-}
-.bg{	
-	height: 100%;	
-	position:relative;
-	padding:20px 10px 20px 10px;
-	background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
-	background-attachment: fixed;	
-	background-size:cover;
-	vertical-align: middle;	
-	
-}
-.container{
-	padding:30px 0 30px 0;
-  display: table;	
-	height: 100%;		
-	border-radius: 10px;
-	background-color: rgba(255,255,255,.9);
-	box-sizing: border-box;
-
 }
 .container .vertical-align{	
 	display: table-row;	
