--- a/www/css/main-page.css
+++ b/www/css/main-page.css
@@ -7,9 +7,8 @@ html{
 	overflow: hidden;
 }
 .bg > a{	
-	padding:8px 20px;
-	float: right;
-	margin-right: 15px; margin-top: 15px;*/
+	padding:8px 20px;	
+	margin-right: 15px; margin-top: 15px;
 	text-decoration: none;	
 	background-color: #ED5650;
 	color: #fff;
@@ -20,21 +19,23 @@ html{
 	text-decoration: none;
 	background-color: #f07772;
 }
+.bg .admin{
+	float: right;
+}
 body{	
 	height: 100%;
-	background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
+	/*background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
 	background-attachment: fixed;	
-	padding: 10px;
-	box-sizing: border-box;
+	padding: 10px;*/	
 	overflow: auto;
 }
 .bg{	
 	min-height: 100%;	
-	background-color: rgba(255,255,255,0.9); 
-	border-radius: 6px;	
+	background-color: #fff; 		
+	box-sizing: border-box;
 }
 .container{
-	height: 100%;	
+	height: inherit;	
 	padding-top: 50px;
 	padding-bottom: 30px;	
 	box-sizing: border-box;
@@ -52,7 +53,7 @@ body{
 .degustation{
 	margin-top: 30px;
 }
-.start-btn{	
+.start-btn{
 	margin-top: 30px;
 	padding: 20px 40px;
 	background-color: #ccc;
@@ -68,25 +69,4 @@ body{
 .smoothly{
 	-webkit-transition-duration: 0.4s; 
   transition-duration: 0.4s;
-}
-/*
-.start-btn:focus,.start-btn:active{
-	border: none;
-	box-shadow: none;
-}*/
-#flying-bubbles{
-	z-index: 0;
-}
-#bg{
-	z-index: 100;
-}
-.sup{
-	position: absolute;
-	z-index: 100;
-	height: 400px;
-	width:400px;
-	background-color: white;
-}
-.action:active .sup{
-	display: none;
 }
