--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -1,98 +1,27 @@
-* {
-	padding:0;
-	margin: 0;
+.bg .return-main{
+	float: left;
+	margin-left: 15px;
 }
-html{
-	height: 100%;
-}
-/*a,a:hover,a:focus,a:active{
-	text-decoration: none;
-	color:#f2f2f2;
-  
-  background-color: white;
-}*/
-.container > a{			
-	display: block;
-	float:right;
-	padding:8px 16px;
-	margin-right: 10px;
-	margin-top: -20px;
-	text-decoration: none;	
-	background-color: #ED5650;
-	color: #fff;
-	border-radius: 20px;
-	font-size: 11px;
-}
-.container > a:hover{
-	background-color: #f07772;
-}
-body{
-	background: url("../images/iconbox-1.jpg") no-repeat 50% 50% ;
-	/*background-color: #4b4756;*/
-	background-attachment: fixed;	
-	height: 100%;	
-	background-size:cover;
-	vertical-align: middle;	
-	
-}
-.bg{	
-	height: 100%;	
-	position:relative;
-	padding:20px 10px 20px 10px;
-}
-.container{
-	padding:30px 0 30px 0;
-  display: table;	
-	height: 100%;		
-	border-radius: 10px;
-	background-color: rgba(255,255,255,.8);
-	box-sizing: border-box;
-}
-.container .vertical-align{	
-	display: table-row;	
-	vertical-align: middle;
-}
-.vertical-align{
-	margin: 0;padding: 0;
-}
-.header h1{
-	font-size: 40px;
-	/*изменение шрифта медиа запросами*/
-}
-.header p{
-	font-size: 34x;
-}
- p{
-	font-size: 20px;
-}
-.degustation{
-	margin-top: 30px;
-}
-.start-btn{	
-	margin-top: 30px;
-	padding: 20px 40px;
-	background-color: #ccc;
-	background-color: #ED5650;
-	color: #fff;
-	border-radius: 50px;
-	border:none;
-	font-size: 18px;	
-}
-.start-btn:hover{
-	background-color: #f28884; 
-}
-.smoothly{
-	-webkit-transition-duration: 0.4s; 
-  transition-duration: 0.4s;
-}
-/*
-.start-btn:focus,.start-btn:active{
+.choose-send{		
+	padding:16px 28px;	
 	border: none;
-	box-shadow: none;
-}*/
-#flying-bubbles{
-	z-index: 0;
+	background-color: #ED5650;
+	color: #fff;
+	border-radius: 40px;
+	font-size: 16px;
 }
-#bg{
-	z-index: 100;
+.choose-send:hover{
+	text-decoration: none;
+	background-color: #f07772;
+	color: #fff;
+}
+.cd-wrapper{
+	display: none;
+	z-index: 10;
+	position: absolute;
+	left: 0px; top: 0px;
+	height: 100%;
+	width: 100%;
+	background-color: #f2f2f2;
+	overflow-y: hidden;
 }
