--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -25,15 +25,18 @@
 	background-color: #f2f2f2;
 	overflow-y: hidden;
 }
-.list p{
-	display:block;
+.list p,.list span{
+	display:inline-block;
 	padding:3px 10px;
 	max-width:200px;
-	background: #888;
+	background: #bbb;
 }
 .list p:hover{
 	cursor: pointer;
 }
 .cognacgroup ul li{
+	display:inline-block;
+}
+.rowrate input{
 	display:inline-block;
 }
