--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -47,3 +47,13 @@ padding-left:10px;
 float:left;
 padding-right:10px;
 }
+#form .rowrate input:nth-of-type(n+5){
+	color:red;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
