--- a/www/css/admin-page-catalog.css
+++ b/www/css/admin-page-catalog.css
@@ -4,14 +4,15 @@
 }
 .cognacgroup a{
 	display: block;
-	padding: 8px 10px;
+	padding: 6px 10px;
+	margin:10px 0;
 	color: white;
 	background-color: #fff;
 	color:  #919191;
 	text-decoration: none;
-	border-radius: 20px;
+	border-radius: 8px;
 	border: 1px solid #919191;
-	font-size: 12px;
+	font-size: 14px;
 }
 .cognacgroup a:hover{
 	background-color: #919191;
@@ -35,10 +36,15 @@
 	width:120px;
 	height: 38px;
 	font-size: 15px;
-	border-radius: 25px;
+	border-radius: 10px;
 	background-color: #fff;
 	margin-bottom: 10px;
+	margin-right:10px; 
 	color: #797979;
+}
+.btn-right:active{
+	box-shadow: 0 0 0 0 #fff;
+	border: none;
 }
 .button-add:hover{
 	background-color: #91D069;
@@ -66,4 +72,7 @@
 }
 .table th{	
 	text-align: left;
+}
+.selected{ 
+	background: #d1e4dd;
 }
