--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -37,23 +37,45 @@
 .cognacgroup ul li{
 	display:inline-block;
 }
-.rowrate{}
+.group{
+	text-align:left;
+}
+.rowrate{
+	margin-top:40px;
+}
+.rowrate p{
+	text-align:center;
+}
 .cellrate{
-	clear:both; 
-   text-align:left;
+	margin:0 auto;
+	width:300px;
 }
-.cellrate span{
-padding-left:10px;
-float:left;
-padding-right:10px;
+.rowrate .cellrate:last-of-type label{
+	min-width:124px;
 }
-#form .rowrate input:nth-of-type(n+5){
-	color:red;
+.cellrate label{
+	max-width:40%;
+	min-width:120px;
 }
-
+.cellrate input{
+	padding-left:5px;
+}
+.cellrate input[type=number]{
+	min-width:50px;
+}
+.cellrate input[type=number]+span{
+	display:inline-block;
+	width:100px;
+	text-align:center;
+	font-style: italic;
+	font-weight:600;
+	color:#999;
+	
+}
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
