--- a/www/css/admin-float-window.css
+++ b/www/css/admin-float-window.css
@@ -197,7 +197,7 @@
   width:40px;
   height: 40px;
   border-radius: 20px;
-  background-color: #1a903f;
+  background-color: #55a567;
   color: #fff;
   border: none;
 }
