--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -36,14 +36,44 @@
 }
 .cognacgroup ul{
 	width:100%;
-	margin-top:20px;
+	margin-top:40px;
 }
+
+.cognac{
+	display: block;
+	border-radius: 10px;
+	border:none;
+	//background-color: #fff;
+	//border:2px solid #ee6661;
+	margin:14px;
+	padding: 20px;
+	text-align: center;
+	font-size: 18px;
+	width: 240px;	
+	box-sizing: content-box;
+}
+
+.cognac span{
+  color: #626262;
+  display: inline-block;
+  min-width: 240px;
+  box-sizing: content-box;
+}
+
 .cognacgroup ul li{
 	display:inline-block;
 	padding:0;
 	margin:0;
-	padding:3px 10px;
-	background:#ddd;
+	padding:4px 12px;
+	border-radius: 20px;
+	color: #606060;
+	//font-style: italic;
+	font-weight: lighter;	
+}
+.cognacgroup ul li:hover{
+	cursor: pointer;
+	color: white;
+	background-color: #ed5650;
 }
 .cognacgroup ul li p{
 	padding-bottom:0;
@@ -54,28 +84,40 @@
 }
 .rowrate{
 	margin-top:40px;
+	box-sizing: content-box;
+	text-align: center;
 }
 .rowrate p{
 	text-align:center;
 }
 .cellrate{
-	margin:5px auto;
-	width:300px;
+	margin:5px auto;	
 	line-height:25px;
+	
 }
 .rowrate .cellrate:last-of-type label{
 	min-width:124px;
 }
 .cellrate label{
 	max-width:40%;
-	min-width:120px;
+	min-width:150px;
 	font-size:16px;
+	color: #626262;
+	font-weight: normal;
+	//font-style: italic;
+	text-align: left;
 }
-.cellrate input{
-	padding-left:5px;
+.cellrate input{	
+	color: #272727;
+  border: 1px solid #cac9c9;
+  border-radius: 6px;
+  padding:4px 10px 4px 10px; 
+  font-size: 15px;
+  width: 55px;
+  box-sizing: border-box;
 }
 .cellrate input[type=number]{
-	min-width:50px;
+	min-width:30px;
 }
 .cellrate input[type=number]+span{
 	display:inline-block;
@@ -85,7 +127,7 @@
 	color:#999;
 }
 .cellrate input[type=text]{
-	width:150px;
+	width:280px;
 }
 
 input[type=number]::-webkit-outer-spin-button,
@@ -94,4 +136,27 @@ input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
-
+.congnac .main{
+	display: inline-block;
+	height: 50px;
+	width: 50px;
+	background-color: #448452;
+	border-radius: 25px;
+	color: #fff;
+}
+.cognac1 {
+	background-color: #ee6661;	
+}
+.cognac1 span{
+	color: white;
+	font-size: 20px;
+}
+.submit-cognac{
+	padding: 25px 50px;
+	background-color: #ee6661;
+	color: #fff;
+	//font-style: italic;
+	font-size: 15px;
+	border: none;
+	border-radius: 40px;
+}
