--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -171,9 +171,15 @@ input[type=number]::-webkit-inner-spin-button {
 .rowrate>p{
 	margin-top:30px;
 }
+.list{
+	margin-top: 50px;
+}
 .cancel-tast{
 	display: inline-block;
-	float: right;
+	//float: right;
+	position:absolute;
+	top:20px;
+	right:20px;
 	width: 45px;
 	height: 45px;
 	background-color: #ed5650;
