new style taster

--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -22,18 +22,10 @@
 	left: 0px; top: 0px;
 	height: 100%;
 	width: 100%;
-	background-color: #f2f2f2;
-	overflow-y: hidden;
+	background-color: #f7f7f7;
+	overflow-y: scroll;
 }
-.list p,.list span{
-	display:inline-block;
-	padding:3px 10px;
-	max-width:200px;
-	background: #bbb;
-}
-.list p:hover{
-	cursor: pointer;
-}
+
 .cognacgroup ul{
 	width:100%;
 	margin-top:40px;
@@ -178,4 +170,32 @@ input[type=number]::-webkit-inner-spin-button {
 }
 .rowrate>p{
 	margin-top:30px;
+}
+.cancel-tast{
+	display: inline-block;
+	float: right;
+	width: 45px;
+	height: 45px;
+	background-color: #ed5650;
+	border-radius: 50%;
+	font-size: 30px;
+	font-family: 'Times new roman';
+	border:none;
+	color: #fff;
+	margin-bottom: 40px;
+}
+.list p{
+	display:block;
+	padding:20px 0px;	
+	background: #fff;
+	text-align: center;
+	border-radius: 20px;
+	border: 2px solid #fff;
+	font-size: 16px;
+}
+.list p:hover{	
+	background: #f7f7f7;	
+}
+.list p:hover{
+	cursor: pointer;
 }
