--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -203,8 +203,8 @@ input[type=number]::-webkit-inner-spin-button {
 	font-size: 16px;
 }
 .list p:hover{	
-	background: #f7f7f7;	
-}
-.list p:hover{
+	//border: 2 px solid #ed5650;
+	border-color:   #ed5650;
 	cursor: pointer;
+	//background: #f7f7f7;	
 }
