--- a/www/css/admin-page-catalog.css
+++ b/www/css/admin-page-catalog.css
@@ -20,13 +20,9 @@
 	border: 1px solid #555555;	
 	font-size: 14px;	
 }
-.cognacgroup a:hover{
+.cognacgroup a:hover,.cognacgroup .active{
 	background-color: #555555;
 	color: #f4f4f4;	
-}
-.cognacgroup .cognacgroup-a-active{
-	background-color: #555555;
-	color: #f4f4f4;
 }
 .right-column {
 	padding: 20px 0px 0px 20px;
@@ -82,6 +78,6 @@
 .table th{	
 	text-align: left;
 }
-.selected{ 
+.active{ 
 	background: #d1e4dd;
 }
