--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -25,7 +25,10 @@
 	background-color: #f7f7f7;
 	overflow-y: scroll;
 }
-
+.list-pin-panel{
+	height: 100%;
+	min-height: 550px;
+}
 .cognacgroup ul{
 	width:100%;
 	margin-top:40px;
