--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -213,3 +213,83 @@ input[type=number]::-webkit-inner-spin-button {
 	cursor: pointer;
 	//background: #f7f7f7;	
 }
+/*стили для окна пин кода*/
+.row-pin{
+	padding: 0 10px 0 10px;
+	height: 100%;
+}
+
+div.pin{
+	display: block;
+	background-color: #fff;
+	border-radius: 20px;
+	//border:2px solid #ED5650;
+	border: none;
+	padding: 6px;
+	height: 100%;
+	box-sizing: border-box;
+}
+div.pin input{
+	display: block;
+}
+.cancel-pin i{
+	color: #fff;
+}
+.cancel-pin{
+	position: absolute;		
+	top:10px; right: 10px;
+	margin: 0;	
+	border: none;
+	border-radius: 50%;
+	width: 45px; height: 45px;
+	background-color: #ED5650;
+}
+.taster-name{
+	//border: 2px solid #ED5650;
+	//border-radius: 20px;
+	//padding:10px 30px;
+	box-sizing: padding-box;
+	font-style: italic;
+	color: #404040;
+	font-size: 26px;
+}
+.pin-code{
+	font-size: 26px;
+}
+.text-pin input[type=number]{
+	display: inline-block;
+	width:170px;
+	height: 55px;
+	border-radius: 40px;
+	border: none;
+	//background-color: #FDEEED;
+	background-color: #fff;
+	border: 2px solid #ED5650;
+	font-size: 32px;
+	padding-left: 33px;
+	color:#606060;
+	letter-spacing: 0.3em;
+}
+.text-pin input[type=number]::-webkit-inner-spin-button,
+.text-pin input[type=number]::-webkit-outer-spin-button 
+{
+	-webkit-appearance: none;
+  margin:0;
+}
+.btn-enter-pin{
+	padding: 15px 60px;
+	background-color: #ED5650;
+	border: none;
+	border-radius: 40px;
+	font-size: 18px;
+	color: #fff;
+}
+span.text-info{
+	font-style: italic;
+	font-size: 14px;
+	color: #7e7e7e;
+}
+span.pin-error{
+	font-size:14px;
+	color:#b94a48;
+}
