--- a/www/css/taster-page.css
+++ b/www/css/taster-page.css
@@ -79,7 +79,8 @@
 .cognacgroup ul li p{
 	padding-bottom:0;
 	margin-bottom:0;
-	padding:4px 12px;
+	padding:7px 9px;
+	margin-right: 4px;
 	border-radius: 50%;
 
 }
