--- a/www/css/admin-float-window.css
+++ b/www/css/admin-float-window.css
@@ -68,12 +68,26 @@
 
 /*ВСПЛЫВАЮЩЕЕ ОКОШКО ПРИ НАЖАТИИ НА ЗАКРЕПИТЬ 
 ИЗМЕНЕНИЯ В taster.php*/
+.b-popup-tasting .b-popup-tasting-close{
+  position: absolute;
+  right:0px;
+  top:0px;
+  display: block;
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  border: none;
+  color: #000;
+  font-size: 22px;
+  border-radius: 50%;
+}
 .small_next{
   font-size: 16px;
   //line-height: 2;
 }
 .big_next{  
-  //line-height: 2;  
+  display: block;
+  margin-top:  10px;
 }
 .content_box{
   display: block;
@@ -96,8 +110,8 @@
 }
 .b-popup-border-secure{
   width:500px;
-  height:270px;
-  top:-webkit-calc(50% - 125px);
+  height:280px;
+  top:-webkit-calc(50% - 140px);
   left:-webkit-calc(50% - 250px);  
   font-size:32px;
   text-align:center;
