--- a/www/css/admin-page-report.css
+++ b/www/css/admin-page-report.css
@@ -1,7 +1,8 @@
 .report-place{	
 	display: inline-block;
 	width: 432px;
-	padding:16px	border: 1px solid #615B71;;
+	padding:16px;
+	border: 1px solid #615B71;;
 
 	border-radius: 4px;
 	background-color: #fff;
